--- a/index.html
+++ b/index.html
@@ -131,60 +131,18 @@
             <div class="col-12">
               <div class="row">
 
-                <!-- <div class="col-sm-12 col-lg-4">
-                <img style="border-radius: 30%; width: 15rem; height: 15rem" src="/img/fampic.jpg" 
-                alt="">
-              </div> -->
+                <div class="col-sm-12 col-lg-4">
+                  <img style="border-radius: 30%; width: 15rem; height: 15rem" src="/img/fampic.jpg" alt="">
+                </div>
                 <div class="col" id="aboutme">
                   <p class="text-faded mb-4" id="aboutme">
                     Help businesses build powerful web solutions that drive growth. With expertise in backend
                     development, full-stack leadership, and project management, I create efficient, high-impact digital
                     products. Let’s bring your ideas to life with smart technology!
-                  </p>
-                  <!-- <p class="text-faded mb-4" id="aboutme">I was born on a small island in the South Pacific and came to America to look for a better opportunity. I
-                  grew up in San Jose, CA and worked for my father’s videography company. My position in the family business
-                  was to work with computer programs such as Photoshop and Vegas pro. It is through this experience that
-                  I developed a passion for technology and aspire to become a Software Engineer. Some of my other passions
-                  include traveling with my family, creating and playing music, and playing and watching basketball.
-                </p> -->
-                  <!-- <p class="text-faded" id="aboutme">
-                  I currently am in the process of completing my Computer Science degree at Utah Valley University. I returned to San Jose
-                  to attend Coding Dojo where I advanced my skills in the MEAN, Java, and Python stacks. I specialize in
-                  using these languages to create software that caters to individuals, small-businesses, and enterprise level
-                  corporations. Knowing that there is no limit to the things that I can create drives my passion for software
-                  engineering. I aspire to help bring other’s innovative ideas into reality, so let’s get to work.
-                </p> -->
+                  </p>              
                 </div>
               </div>
-              <h2 class="text-white">Some of My Passions</h2>
-              <hr class="light my-4">
-            </div>
-            <div class="">
-              <!-- <div class="col"> -->
-              <img align="middle" class="col-lg-3 col-md-6 col-sm-6 mx-3 my-3 passion-img"
-                style="border-radius: 50%; width: 15rem; height: 13rem"
-                src="https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                alt="">
-              <!-- <span id="passions">
-                 I love creating music and playing music
-              </span>
-            </div>
-            <div class="col"> -->
-              <img class="col-lg-3 col-md-6 col-sm-6 mx-3 my-3 passion-img"
-                style="border-radius: 50%; width: 15rem; height: 13rem"
-                src="https://cdn-images-1.medium.com/max/1559/1*iwPLQjyFYRTVeQ2cb4S9rA.png" alt="">
-              <!-- <span class="col-3" id="passions">
-                I love creating music and playing music
-              </span>
-            </div>
-            <div class="col"> -->
-              <img class="col-lg-3 col-md-6 col-sm-6 mx-3 my-3 passion-img"
-                style="border-radius: 50%; width: 15rem; height: 13rem" src="/img/notavandal-ttAhBmEfNIk-unsplash.jpg"
-                alt="">
-              <!-- <span class="col-3" id="passions">
-                I love creating music and playing music
-              </span>
-            </div> -->
+
 
             </div>
             <div>
@@ -194,7 +152,7 @@
         </div>
     </section>
 
-    <div class="parallax" id="pic1"></div>
+    <!-- <div class="parallax" id="pic1"></div> -->
 
     <section id="services">
       <div class="container">
@@ -263,6 +221,12 @@
           </div>
           <div class="col-lg-2 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x devicon-react-plain  text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3 sr-icons">React</h3>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x devicon-express-original  text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3 sr-icons">Express JS</h3>
             </div>
@@ -313,7 +277,7 @@
       </div>
     </section>
 
-    <div class="parallax mb-4" id="pic2"></div>
+    <!-- <div class="parallax mb-4" id="pic2"></div> -->
 
     <section class="p-0 " id="portfolio">
       <div class="container">
